[ADD] Summary Style

--- a/themes/zen/i18n/pt.toml
+++ b/themes/zen/i18n/pt.toml
@@ -23,7 +23,7 @@ other = "Última modificação:"
 other = "Criado:"
 
 [search_placeholder]
-other = "Procurar"
+other = "Buscar"
 
 [search_title]
 other = "Digite os termos que você deseja procurar"
